# chart.xkcd

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
docs/: 404.html  index.html  objects.inv
docs/bar/: index.html
docs/conduct/: index.html
docs/contributing/: index.html
docs/license/: index.html
docs/line/: index.html
docs/pie/: index.html
docs/radar/: index.html
docs/renderer/: index.html
docs/scatter/: index.html
docs/stacked_bar/: index.html
examples/: bar.py  bar.sql  index.js  line.py  line.sql  notebook.py  pie.py  pie.sql  radar.py  radar.sql  scatter.py  scatter.sql  snailz.json  stacked_bar.py  stacked_bar.sql  test_selection.py  xy.py
js/: eslint.config.mjs  package-lock.json  package.json
js/examples/: example.html  index.js
js/src/: Bar.js  Line.js  Pie.js  Radar.js  Scatter.js  StackedBar.js  XY.js  config.js  index.js  widget.js
js/src/components/: Tooltip.js
js/src/utils/: addAxis.js  addFilter.js  addFont.js  addLabels.js  addLegend.js  colors.js  initChart.js
pages/: .pages  bar.md  line.md  pie.md  radar.md  renderer.md  scatter.md  stacked_bar.md
py/: pyproject.toml
py/chart_xkcd/: __init__.py  charts.py~  renderer.py
py/src/chart_xkcd/: __init__.py
src/: Radar.js  StackedBar.js
src/chart_xkcd/: __init__.py  bar.py  charts.py  config.py  line.py  main.py  pie.py  radar.py  renderer.py  scatter.py  stacked_bar.py  widget.py
