[project]
name = "chart-xkcd"
description = "Python API for generating XKCD-style charts"
keywords = ["charts"]
version = "0.4.2"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.0",
    "marimo>=0.19.11",
]

[project.urls]
Repository = "https://github.com/gvwilson/chart.xkcd"
Documentation = "https://chartxkcd.readthedocs.io"

[project.scripts]
chart_xkcd = "chart_xkcd.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chart_xkcd"]
artifacts = [
    "src/chart_xkcd/static/chart.xkcd.js",
]

[tool.hatch.build.targets.sdist]
artifacts = [
    "src/chart_xkcd/static/chart.xkcd.js",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "markdown-include>=0.8.1",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "ruff>=0.14.10",
    "snailz>=5.5.1",
    "taskipy>=1.14.1",
    "twine>=6.2.0",
]

[tool.taskipy.tasks]
build = {help = "build package", cmd = """
python bin/font_encode.py assets/xkcd-script.ttf js/src/utils/fontData.js &&
cd js &&
npm run build &&
cd - &&
python -m build
"""}
lint = {help = "check code issues", cmd = """
ruff check . &&
ty check . &&
cd js &&
npm run lint
"""}
clean = {help = "clean up", cmd = """
rm -rf ./dist &&
rm -f ./src/static/*.js &&
rm -rf ./data &&
rm -rf ./tmp &&
find . -path './.venv' -prune -o -type d -name '.ruff_cache' -exec rm -rf {} + &&
find . -path './.venv' -prune -o -type d -name '__pycache__' -exec rm -rf {} + &&
find . -path './.venv' -prune -o -type f -name '*~' -exec rm {} +
"""}
data = {help = "regenerate example data", cmd = """
snailz --outdir data --params examples/snailz.json &&
mkdir -p ./tmp &&
for file in examples/*.sql
do
    name=$(basename "$file" .sql)
    sqlite3 data/snailz.db < "$file" > "tmp/$name.csv"
done
"""}
docs = {help = "build documentation", cmd = """
mkdir -p pages &&
cp README.md pages/index.md &&
cp LICENSE.md pages/license.md &&
cp CODE_OF_CONDUCT.md pages/conduct.md &&
cp CONTRIBUTING.md pages/contributing.md &&
mkdocs build &&
touch docs/.nojekyll &&
cp docs-requirements.txt docs/requirements.txt
"""}
ex_js = {help = "run server to view JS examples", cmd = "cd js && npm start"}
ex_py = {help = "re-create HTML files using Python", cmd = """
mkdir -p tmp &&
for file in examples/*.py
do
    name=$(basename "$file" .py)
    python "$file" "tmp/$name.csv" "tmp/$name.html"
done
"""}
fix = {help = "fix Python code issues", cmd = "ruff check --fix ."}
format = {help = "format Python code", cmd = "ruff format ."}
publish = {help = "publish using ~/.pypirc credentials", cmd = "twine upload --verbose dist/*"}
serve = {help = "run local server", cmd = "python -m http.server"}
